# alteroSmartTestTask

./: .gitignore  AlteroSmartTestTask.postman_collection.json  OWNERS  README.md  WORKSPACE  build.sh  docker-compose.yml  go.mod  go.sum
backend/services/MS_Generation/: Dockerfile  service.go
backend/services/MS_Generation/cmd/: main.go
backend/services/MS_Generation/common/api/: BUILD.bazel  build.sh  service.proto
backend/services/MS_Generation/common/api/common/: device.proto
backend/services/MS_Generation/generator/: generator.go  generator_test.go
backend/services/MS_Generation/server/: proto_server.go  server.go
backend/services/MS_Persistence/: Dockerfile  service.go
backend/services/MS_Persistence/cmd/: main.go
backend/services/MS_Persistence/common/api/: build.sh  service.proto
backend/services/MS_Persistence/database/: client.go
backend/services/MS_Persistence/migrations/: 0_create_db.up.sql  Dockerfile  O_create_db.down.sql  run_migration.go
backend/services/MS_Persistence/server/: server.go  server_test.go
backend/services/MS_Persistence/server/mocks/: DatabaseClient.go
common/database/: flag_module.go  postgresql_connection.go
common/errors/: error.go
common/flagenv/: flag_env_parser.go  flag_env_parser_test.go
common/log/: flags_module.go
common/log/context/: log_context.go  log_context_interceptor.go
common/syncgo/: syncgo.go
frontend/web/: index.html
