load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "ms_generation_api_proto",
    srcs = ["service.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_mwitkow_go_proto_validators//:validator_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

go_proto_library(
    name = "api",
    compilers = [
        "@io_bazel_rules_go//proto:go_grpc",
        "@io_bazel_rules_go//proto:go_proto_validate",
    ],
    importpath = "alteroSmartTestTask/backend/services/MS_Generation/common/api",
    proto = ":ms_generation_api_proto",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_mwitkow_go_proto_validators//:_validators_golang",
    ],
)
